@@ -1,3 +1,9 @@
+2006-10-12  Ville Vainio  <vivainio@gmail.com>
+
+	* jobctrl.py: Add new "jobctrl" extension for spawning background
+	processes with "&find /". 'import jobctrl' to try it out. Requires
+	'subprocess' module, standard in python 2.4+.
+
 2006-10-09  Fernando Perez  <Fernando.Perez@colorado.edu>
 
 	* IPython/Magic.py (Magic.parse_options): add a new posix option
